# tax-buddy

./: .gitignore  README.md  agent.py  app.py  pyproject.toml  requirements.txt
db/faiss_index_faqs_budget_2025/: index.faiss  index.pkl
db/faiss_index_finance_bill_2025/: index.faiss  index.pkl
tools/: calculator_tools.py  chat_history_tool.py  pdf_query_tools.py  query_enhancer.py  react_prompt_template.py  web_search_query_tools.py
